--- a/themes/mypiggyback/assets/css/_commons.css
+++ b/themes/mypiggyback/assets/css/_commons.css
@@ -185,7 +185,8 @@ ul.reset-list,
 ol.reset-list,
 ul.sub-menu,
 .fl-pagi-ctlr ul,
-.reset-slect ul{
+.reset-slect ul,
+ul.ab-top-menu{
 	margin: 0;
 	padding: 0;
 	list-style: none;
@@ -193,7 +194,8 @@ ul.sub-menu,
 .reset-list li,
 ul.sub-menu li,
 .fl-pagi-ctlr ul li,
-.reset-slect ul li{
+.reset-slect ul li,
+ul.ab-top-menu li{
 	padding: 0;
 	margin: 0;
 	list-style: none;
@@ -202,7 +204,8 @@ ul.sub-menu li,
 .reset-list li:before,
 ul.sub-menu li:before,
 .fl-pagi-ctlr ul li:before,
-.reset-slect ul li:before{
+.reset-slect ul li:before,
+ul.ab-top-menu li:before{
 	content: none!important;
 }
 
