--- a/themes/mypiggyback/assets/css/_about.css
+++ b/themes/mypiggyback/assets/css/_about.css
@@ -148,6 +148,7 @@
 	line-height: 1;
 	font-family: 'GoboldBold';
 	color: #141414;
+	text-transform: uppercase;
 }
 
 
@@ -157,6 +158,7 @@
 
 .mbp-about-team-entry-hdr-title{
 	margin-bottom: 50px;
+	text-transform: uppercase;
 }
 
 .mbp-abot-team-grds > ul{
@@ -198,6 +200,7 @@
 	padding-left: 15px;
 	color: #fff;
 	font-family: 'GoboldLowplus';
+	text-transform: capitalize;
 }
 
 .mbp-atgi-des p{
