--- a/themes/mypiggyback/assets/css/_footer.css
+++ b/themes/mypiggyback/assets/css/_footer.css
@@ -379,7 +379,18 @@
 	.ftr-col-3{
 		margin-bottom: 15px;
 	}
-
+	.ftr-top-bg{
+		max-width: 250px;
+	}
+	.ftr-btm-copywrite p{
+		font-size: 12px;
+	}
+	.ftr-btm-menu ul li a{
+		font-size: 10px;
+	}
+	.ftr-btm-menu ul li:after{
+		width: 1px;
+	}
 }
 
 @media(max-width: 479px){
