--- a/themes/mypiggyback/assets/css/_about.css
+++ b/themes/mypiggyback/assets/css/_about.css
@@ -327,16 +327,15 @@
 }
 
 @media(max-width: 1399px){
-	
+	.mbp-about-num-lft-bg-color{
+		display: none;
+	}
 }
 
 @media(max-width: 1299px){
 	.mbp-about-num-lft-bg{
 		max-width: 60%;
     	width: 100%;
-	}
-	.mbp-about-num-lft-bg img {
-	    height: 607px;
 	}
 }
 
@@ -347,7 +346,14 @@
 	.mbp-about-num-grd-item{
 		padding: 35px 30px;
 	}
-
+	.mbp-about-num-grds ul li{
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	.mbp-about-num-grds ul {
+	    margin-left: -10px;
+	    margin-right: -10px;
+	}
 }
 
 @media(max-width: 991px){
