--- a/themes/mypiggyback/assets/css/_contact.css
+++ b/themes/mypiggyback/assets/css/_contact.css
@@ -319,6 +319,9 @@ we-accept-sec-wrp
 		padding-left: 8px;
 		padding-right: 8px;
 	}
+	.contact-info-box a br{
+		display: none;
+	}
 
 }
 
@@ -368,6 +371,9 @@ we-accept-sec-wrp
 	}
 	.contact-info-bg{
 		background-size: 1440px auto!important;
+	}
+	.contact-info-box a br{
+		display: block;
 	}
 }
 
@@ -555,7 +561,12 @@ we-accept-sec-wrp
 	.we-accept-title.left-icon-title.fl-h4{
 		font-size: 22px;
 	}
-
+	.contact-submit-btn .fl-contct-btn.fl-red-btn{
+		width: 100%!important;
+		max-width: 100%;
+		height: 44px!important;
+		font-size: 15px!important;
+	}
 }
 
 @media(max-width: 479px){
