--- a/themes/mypiggyback/assets/css/_about.css
+++ b/themes/mypiggyback/assets/css/_about.css
@@ -47,7 +47,12 @@
 	line-height: 2;
 	margin-bottom: 28px;
 }
-
+.mbp-about-des .mbp-about-des-btm p{
+	margin-bottom: 0;
+}
+.mbp-about-des .mbp-about-des-btm p:last-of-type{
+	margin-bottom: 28px;
+}
 .mbp-about-num-sec{
 	padding-bottom: 50px;
 	margin-top: -110px;
@@ -182,8 +187,13 @@
 .mbp-atgi-img-ctlr{
 	overflow: hidden;
 }
+.mbp-atgi-img-div{
+	overflow: hidden;
+	height: 230px;
+}
 .mbp-atgi-img{
-	min-height: 230px;
+	width: 100%;
+	height: 100%;
 	transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	-ms-transition: all 0.5s;
@@ -198,6 +208,8 @@
 	padding-bottom: 1px;
 	margin-bottom: 30px;
 	background: #141414;
+	margin-left: -1px;
+	margin-right: -1px;
 }
 .mbp-atgi-des-title{
 	margin-bottom: 8px;
