--- a/themes/mypiggyback/assets/css/_commons.css
+++ b/themes/mypiggyback/assets/css/_commons.css
@@ -226,9 +226,10 @@ form .bootstrap-select{
 form .bootstrap-select button{
 	background: transparent;
 	border: 0;
-	color: #710023;
+	color: #000;
 	text-transform: uppercase;
 	font-size: 16px;
+	border: 1px solid #f7f7f7;
 }
 form .bootstrap-select .caret{
 	border: 0;
@@ -256,7 +257,7 @@ form .bootstrap-select .caret{
     font-weight: 600;
     text-decoration: inherit;
     color: #1E1E1E;
-    font-size: 22px;
+    font-size: 17px;
     padding-right: 0;
     position: absolute;
     top: 50%;
@@ -299,24 +300,30 @@ form .bootstrap-select .dropdown-toggle:focus{
 }
 form .dropdown-menu{
     margin: 0;
-    background-color: #cabb9f;
+    background-color: #ccc;
     border: none;
     border-radius: 0;
     box-shadow: none;
     padding: 12px 0 10px;
+    font-size: 14px;
 }
 form .dropdown-menu li{
     position: relative;
     margin-bottom: 6px;
+    padding: 0!important;
+}
+form .dropdown-menu li:before{
+	content: none!important;
 }
 form .dropdown-menu li a{
 	padding-top: 6px;
 	color: #fff;
 }
-.dropdown-menu>.active>a, 
-.dropdown-menu>.active>a:focus, 
-.dropdown-menu>.active>a:hover{
-	background-color: #F3BF00;
+form 
+.dropdown-menu > .active > a, 
+.dropdown-menu > .active > a:focus, 
+.dropdown-menu > .active > a:hover{
+	background-color: #d61324;
 }
 
 .bootstrap-select .dropdown-toggle:focus{
