--- a/themes/mypiggyback/assets/css/_account.css
+++ b/themes/mypiggyback/assets/css/_account.css
@@ -642,7 +642,7 @@ a.linkedin-login-btn:hover{
 .filter-check-row > label:hover,
 .register-hdr-con span a:hover,
 .fl-forget-row a:hover{
-	color: #0055FF;
+	color: #F2101C;
 }
 .filter-check-row input[type="checkbox"],
 .filter-check-row input[type="radio"]{
