--- a/themes/mypiggyback/style.css
+++ b/themes/mypiggyback/style.css
@@ -45,3 +45,31 @@ Text Domain: mypiggyback
     padding: 0;
 }
 
+.process-btn {display: flex;justify-content: space-between;}
+
+.process-btn span {
+    color: #F2101C;
+}
+span.applied.topbar {
+    border-left: 5px solid #F2101C;
+    padding-left: 10px;
+    margin-bottom: 50px;
+    display: inline-block;
+    background: #fbfbfb;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 10px;
+    color: #F2101C;
+}
+.jobconfirm {
+    margin-bottom: 10px;
+}
+
+.jobconfirm a {
+    text-decoration: underline;
+}
+.jobconfirm span label {
+    margin-right: 10px;
+    font-weight: 600;
+    color: #F2101C;
+}
