--- a/themes/mypiggyback/style.css
+++ b/themes/mypiggyback/style.css
@@ -36,5 +36,11 @@ Text Domain: mypiggyback
 .details{
 	margin-left: 30px;
 }
-.diverListhook{}
-
+#disMap{
+	height: 500px;
+	width: 600px;
+}
+/*#disMap > div + div{
+	display: none;
+}
+*/
