--- a/themes/mypiggyback/assets/css/_account.css
+++ b/themes/mypiggyback/assets/css/_account.css
@@ -2232,12 +2232,60 @@ a.ui-datepicker-next:after {
 h2.media-frame-actions-heading.screen-reader-text {
     display: none !important;
 }
-.payment-type{
+.order-payment .payment-type{
 	display: flex;
 	justify-content: center;
 }
-.payment-type > div{
-	padding: 5px;
+.order-payment .payment-type-col{
+	padding: 5px 10px;
+}
+.order-payment .payment-type-col label{
+	cursor: pointer;
+}
+.order-payment #payment-form .form-row{
+	margin-left: 0;
+	margin-right: 0;
+}
+
+.order-payment #paypal_payment form input[type="submit"]{
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    border-top-color: transparent;
+    border-right-color: transparent;
+    border-bottom-color: transparent;
+    border-left-color: transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    -webkit-appearance: button;
+    width: 100%;
+    cursor: pointer;
+    color: #fff;
+    background: #007bff;
+    border-color: #007bff;
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.order-payment #paypal_payment form input[type="submit"]:hover {
+    color: #fff;
+    background-color: #0069d9;
+    border-color: #0062cc;
+}
+.order-payment #stripe_payment #card-element{
+	padding-top: 9px;
+}
+.order-payment #stripe_payment .InputElement,
+.order-payment #stripe_payment .InputContainer,
+.ElementsApp, .ElementsApp .InputElement{
+	font-size: 14px!important;
 }
 @media(max-width: 1499px){
 
