--- a/themes/mypiggyback/assets/css/_commons.css
+++ b/themes/mypiggyback/assets/css/_commons.css
@@ -186,7 +186,8 @@ ol.reset-list,
 ul.sub-menu,
 .fl-pagi-ctlr ul,
 .reset-slect ul,
-ul.ab-top-menu{
+ul.ab-top-menu,
+.attachments-browser ul{
 	margin: 0;
 	padding: 0;
 	list-style: none;
@@ -195,7 +196,8 @@ ul.ab-top-menu{
 ul.sub-menu li,
 .fl-pagi-ctlr ul li,
 .reset-slect ul li,
-ul.ab-top-menu li{
+ul.ab-top-menu li,
+.attachments-browser ul li{
 	padding: 0;
 	margin: 0;
 	list-style: none;
@@ -205,7 +207,8 @@ ul.ab-top-menu li{
 ul.sub-menu li:before,
 .fl-pagi-ctlr ul li:before,
 .reset-slect ul li:before,
-ul.ab-top-menu li:before{
+ul.ab-top-menu li:before,
+.attachments-browser ul li:before{
 	content: none!important;
 }
 
