--- a/themes/mypiggyback/assets/css/_account.css
+++ b/themes/mypiggyback/assets/css/_account.css
@@ -692,8 +692,8 @@ span.file-up-instruction-txt {
 	padding: 20px;
 }
 .profile-img-step-1 img{
-	max-width: 120px;
-	height: auto;
+	width: 100%;
+	height: 100%;
 	border-radius: 100% 100%;
 }
 .profile-img-edit:hover{
@@ -1633,10 +1633,14 @@ a.ui-datepicker-next:after {
 	align-items: center;
 	justify-content: center;
 	margin-bottom: 15px;	
+	width: 100px;
+	height: 100px;
+	margin-left: auto;
+	margin-right: auto;
 }
 .author-pro-img img{
-	max-width: 100px;
-	height: auto;
+	width: 100%;
+	height: 100%;
 	border-radius: 100% 100%;
 }
 .author-info p{
@@ -1733,6 +1737,118 @@ h2.media-frame-actions-heading.screen-reader-text {
 .ElementsApp, .ElementsApp .InputElement{
 	font-size: 14px!important;
 }
+
+
+.thankyou-page-cntlr .job-location1 iframe{
+	width: 100%!important;
+}
+
+.profile-photo{
+	height: 60px;
+	width: 60px;
+	border: 2px solid #eee;
+	border-radius: 50%;
+	float: left;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+.profile-photo img{
+	width: 100%;
+	height: 100%;
+}
+.applicants ul li{
+	margin-bottom: 20px;
+}
+.name{
+	float: left;
+	margin-left: 30px;
+}
+.diverListhook {
+    display: flex;
+    align-items: center;
+}
+.details{
+	margin-left: 30px;
+}
+
+#disMap{
+	height: 500px;
+	width: 600px;
+}
+/*#disMap > div + div{
+	display: none;
+}
+*/
+.details.mHc1{
+	margin-left:15px!important;
+}
+.details.mHc1 ul li {
+    width: 100%;
+    padding: 0;
+}
+
+.process-btn {display: flex;justify-content: space-between;}
+
+.process-btn span {
+    color: #F2101C;
+}
+span.applied.topbar {
+    border-left: 5px solid #F2101C;
+    padding-left: 10px;
+    margin-bottom: 50px;
+    display: inline-block;
+    background: #fbfbfb;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 10px;
+    color: #F2101C;
+}
+.jobconfirm {
+    margin-bottom: 10px;
+}
+
+.jobconfirm a {
+    text-decoration: underline;
+}
+.jobconfirm span label {
+    margin-right: 10px;
+    font-weight: 600;
+    color: #F2101C;
+}
+/*payment*/
+.mpb-payment {
+    margin: 50px 0;
+}
+.mpb-payment-inner {
+    max-width: 500px;
+    margin: auto;
+    background: #f9f9f9;
+    padding: 30px;
+}
+.paypal-payment,
+.stripe-payment{
+    display: none;
+}
+.paypal-payment.show-method,
+.stripe-payment.show-method {
+    display: block;
+}
+.payment-type {
+    text-align: center;
+}
+span.sent-apply{
+    color: #D61225;
+}
+span.error {
+    color: #D61225;
+    margin-top: 2px;
+    display: inline-block;
+    font-size: 14px;
+}
+
+
 @media(max-width: 1499px){
 
 }
@@ -1889,6 +2005,10 @@ h2.media-frame-actions-heading.screen-reader-text {
 		margin-left: auto;
 		margin-right: auto;
 	}
+	.mp-input input[type="text"], .mp-input input[type="email"], 
+	.mp-input input[type="number"], .mp-input input[type="password"]{
+		height: 45px;
+	}
 }
 
 @media(max-width: 639px){
@@ -1928,6 +2048,12 @@ h2.media-frame-actions-heading.screen-reader-text {
 	}
 	button.mp-tab-link, a.mp-tab-link{
 		margin-top: 15px;
+	}
+	.fl-input-field-row-grd .fl-input-field-row{
+		width: 100%;
+	}
+	.diverListhook{
+		flex-wrap: wrap;
 	}
 }
 
