--- a/themes/mypiggyback/assets/css/_account.css
+++ b/themes/mypiggyback/assets/css/_account.css
@@ -2072,6 +2072,9 @@ span.error {
 		margin-left: 10px;
 		margin-right: 10px;
 	}
+	.applytojob .vcl-btn{
+		width: 100%;
+	}
 }
 
 @media(max-width: 479px){
