--- a/themes/mypiggyback/style.css
+++ b/themes/mypiggyback/style.css
@@ -109,3 +109,14 @@ span.error {
     display: inline-block;
     font-size: 14px;
 }
+a.current_location{
+    position: absolute;
+    right: 5px;
+    top: 7px;
+    height: 10px;
+    width: 10px;
+    border-radius: 100%;
+    display: inline-block;
+    vertical-align: top;
+    display: none;
+}
