--- a/themes/mypiggyback/assets/css/_order-payment.css
+++ b/themes/mypiggyback/assets/css/_order-payment.css
@@ -25,3 +25,42 @@
 	background: #fff;
 	padding: 40px 30px 30px 30px;
 }
+
+.ops-title{
+	margin-bottom: 40px;
+	line-height: 1.2;
+}
+.order-payment-sidebar-map #route_map{
+	height: 396px;
+}
+
+.opsd-row{
+	padding-top: 15px;
+	padding-bottom: 15px;
+	border-bottom: 2px solid #cecece;
+}
+
+.opsd-loc strong{
+	font-size: 18px;
+	font-weight: 700;
+}
+
+.opsd-loc-1 strong{
+	color: #F2101C;
+}
+.opsd-loc-2 strong{
+	color: #0074D3;
+}
+.opsd-line{
+	display: flex;
+	align-items: center;
+}
+.opsd-row:last-child{
+	border: none;
+}
+
+.opsd-subtotal{
+	font-size: 28px;
+	color: #141414;
+	text-transform: capitalize;
+}
