--- a/themes/mypiggyback/assets/css/_order-payment.css
+++ b/themes/mypiggyback/assets/css/_order-payment.css
@@ -7,11 +7,13 @@
 }
 .order-payment-con{
 	order: 1;
-	width: 70%;
+	width: 58%;
 }
 .order-payment-sidebar{
 	order:  2;
-	width: 30%;
+	width: 42%;
+	margin-top: 105px;
+	padding-left: 30px;
 }
 
 .order-step-title span{
@@ -63,4 +65,152 @@
 	font-size: 28px;
 	color: #141414;
 	text-transform: capitalize;
+}
+
+
+
+
+/*--- --*/
+.order-payment-step-bar{
+	margin-bottom: 30px;
+}
+.order-payment-step-bar-titles ul{
+	display: flex;
+}
+.order-payment-step-bar-titles ul li{
+	width: 25%;
+	text-align: center;
+	padding-bottom: 6px;
+}
+.order-payment-step-bar-titles ul li.active span{
+	color: #F2101C;
+}
+.order-payment-step-bar-titles ul li span{
+	    font-family: 'GoboldLowplus';
+	    display: inline-block;
+	    vertical-align: baseline;
+	    font-size: 20px;
+	    text-transform: capitalize;
+	    color: #141414;
+}
+
+.order-payment-step-bar-radio-cntlr{
+	position: relative;
+}
+.line-eraser{
+	height: 2px;
+    background: #f9f9f9;
+    position: absolute;
+    	top: 50%;
+	transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	z-index: 2;
+}
+.line-eraser-lft{
+	left: 0;
+}
+.line-eraser-rgt{
+	right: 0;
+}
+.order-payment-step-bar-radio-cntlr ul{
+	display: flex;
+	position: relative;
+}
+.order-payment-step-bar-radio-cntlr ul:after {
+	content: "";
+	left: 0;
+	right: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	height: 1px;
+	background: #CCCCCC;
+	position: absolute;
+}
+
+.order-payment-step-bar-radio-cntlr ul li{
+	width: 25%;
+	text-align: center;
+}
+
+.order-payment-step-bar-radio-cntlr ul li span{
+	width: 52px;
+	height: 40px;
+	background: #f9f9f9;
+	display: inline-block;
+	vertical-align: baseline;
+	position: relative;
+	z-index: 2;
+}
+.order-payment-step-bar-radio-cntlr ul li span i{
+	width: 40px;
+	height: 40px;
+	background: #fff;
+	border: 2px solid #7F7F7F;
+	border-radius: 100% 100%;
+	display: inline-block;
+	vertical-align: baseline;
+	position: relative;
+}
+.order-payment-step-bar-radio-cntlr ul li span i:after{
+	content: "";
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
+	background: url('../images/order-payment-check-active.png');
+	background-repeat: no-repeat;
+	background-size: 100% auto;
+	width: 20px;
+	height: 15px;
+	z-index: 3;
+	opacity: 0;
+}
+.order-payment-step-bar-radio-cntlr ul li.active span i:after{
+	opacity: 1;
+}
+
+.order-payment-step-bar-radio-cntlr ul li.active span i{
+	background: #F2101C;
+    border: 1px solid #E21327;
+}
+
+@media(max-width: 1699px){
+	.fl-h2.ops-title,
+	.fl-h2.order-step-title{
+		font-size: 40px!important;
+	}
+}
+@media(max-width: 1499px){
+
+}
+
+@media(max-width: 1399px){
+	
+}
+
+@media(max-width: 1299px){
+
+}
+
+@media(max-width: 991px){
+
+}
+
+@media(max-width: 575px){
+
+
+}
+
+@media(max-width: 479px){
+
+
+}
+
+@media(max-width: 359px){
+
 }
